--- a/hw01.md
+++ b/hw01.md
@@ -1,1 +1,11 @@
-我的第一次作业
+---
+layout: default
+title: 请将标题写在这里
+---
+
+# 用维基百科解释名词
+
+Wikipedia named itself as the freest Encyclopedia.We user can search out what we need by just input on its Search bar.
+Thanks to its availability to many kinds of language,as soon as you press Enter,the result is going to appear in detail.
+For example,I want to search something about computer ,Wikipedia gives me the result about the history of computer,its working principle and so on.
+Wikipedia is an amazing encyclopedia in internet,which contain thousands of contributors' professional view to one thing.That's totally why we can browse such detailed and accurate material in Wikipedia.
