--- a/hw01.md
+++ b/hw01.md
@@ -3,11 +3,8 @@ layout: default
 title: 用维基百科解释名词
 ---
 
-# 用维基百科解释名词
+# 使用维基百科解释名词
 
-<br/>Wikipedia named itself as the freest Encyclopedia.We user can search out what we need by just input on its Search bar.
+首先，我本身是一个台湾人，在台湾没有百度一下这种说法，遇到对方不懂了，台湾人就会说“你可以去维基百科一下啊。”，借此我了解维基百科，它自称为“自由的百科全书”，例如说有一个词条，各路大神都可以发表自己对这个事物的理解和解释，然后逐步去完善这一个词。
 
-<br/>Thanks to its availability to many kinds of language,as soon as you press Enter,the result is going to appear in detail.
-
-For example,I want to search something about computer ,Wikipedia gives me the result about the history of computer,its working principle and so on.
-Wikipedia is an amazing encyclopedia in internet,which contain thousands of contributors' professional view to one thing.That's totally why we can browse such detailed and accurate material in Wikipedia.
+用维基百科解释名词，维基百科可以识别最常用的多种语言，一个快到不行的搜索引擎迅速帮你找到你想找的东西，最重要的一点是，我觉得维基是一个非营利的平台，这种贡献、分享的精神，才是互联网最应该追捧的精神。
