--- a/hw01.md
+++ b/hw01.md
@@ -5,6 +5,37 @@ title: 用维基百科解释名词
 
 # 使用维基百科解释名词
 
-首先，我本身是一个台湾人，在台湾没有百度一下这种说法，遇到对方不懂了，台湾人就会说“你可以去维基百科一下啊。”，借此我了解维基百科，它自称为“自由的百科全书”，例如说有一个词条，各路大神都可以发表自己对这个事物的理解和解释，然后逐步去完善这一个词。
+**COMPUTER：**电子计算机，被普遍称为电脑，它是一种利用数字电子技术，根据各种指令指示其自动执行任意算术或逻辑操作串行的Device。通用计算机因有能遵循被称为“程序”的一般操作集的能力而使得它们能够执行极其广泛的任务。在我看来电脑就是一个为人类服务的机器，它逐步的发展得方便，但是需要我们用一种它能听懂的语言来下达命令。
 
-用维基百科解释名词，维基百科可以识别最常用的多种语言，一个快到不行的搜索引擎迅速帮你找到你想找的东西，最重要的一点是，我觉得维基是一个非营利的平台，这种贡献、分享的精神，才是互联网最应该追捧的精神。
+**COMPUTER SCIENCE：**这个被简称为“CS”的学科充满了未知，它通常为称为创造算法的一个研究，然后他是包含了很多个分支的其实，有些什么搞计算的，有些搞计算机图学的，有些就是研究计算问题？？总之就是让这个计算机更好用更方便。
+
+**SOFTWARE:**老师说的软件大致包含：程序、数据之类的……然后计算机的软件需要硬件才能配合运作例如说我们汽车的导航系统，就要导航仪和GPS定位。
+>软件（英语：software）是一系列按照特定顺序组织的计算机数据和指示，是计算机中的非有形部分。计算机中的有形部分称为硬件，由计算机的外壳及各零件及电路所组成。计算机软件需有硬件才能运作，反之亦然，软件和硬件都无法在不互相配合的情形下进行实际的运作。
+一般来说，计算机软件划分为编程语言、系统软件、应用软件和介于这两者之间的中间件。其中系统软件为计算机使用提供最基本的功能，但是并不针对某一特定应用领域。而应用软件则恰好相反，不同的应用软件根据用户和所服务的领域提供不同的功能。
+软件包括所有在计算机运行的程序，和其架构无关，例如可执行文件、库及脚本语言都属于软件。软件不分架构，有其共通的特性，在运行后可以让硬件运行依设计时要求的机能。软件存储在存储器中，软件不是可以碰触到的实体，可以碰触到的都只是存储软件的零件（存储器）或是介质（光盘或磁片等）。
+软件并不一定只包括可以在计算机上运行的计算机程序，有些定义中，与计算机程序相关的文档，一般也被认为是软件的一部分。简单的说软件就是程序加文档的集合体。软件被应用于世界的各个领域，对人们的生活和工作都产生了深远的影响。
+
+**SOFTWARE ENGINEERING:**软工在我的理解就是用已有的计算机语言来给计算机设置一些命令之类的然后计算机执行。
+>关于软件工程的定义，在GB/T11457-2006《信息技术 软件工程术语》中将其定义为"应用计算机科学理论和技术以及工程管理原则和方法，按预算和进度，实现满足用户要求的软件产品的定义、开发、和维护的工程或进行研究的学科"。
+包括：
+创立与使用健全的工程原则，以便经济地获得可靠且高效率的软件。
+应用系统化，遵从原则，可被计量的方法来发展、操作及维护软件；也就是把工程应用到软件上。
+与开发、管理及更新软件产品有关的理论、方法及工具。
+一种知识或学科，目标是生产质量良好、准时交货、匹配预算，并满足用户所需的软件。
+实际应用科学知识在设计、建构计算机程序，与相伴而来所产生的文件，以及后续的操作和维护上。
+使用与系统化生产和维护软件产品有关之技术与管理的知识，使软件开发与修改可在有限的时间与费用下进行。
+建造由工程师团队所开发之大型软件系统有关的知识学科。
+对软件分析、设计、实施及维护的一种系统化方法。
+系统化地应用工具和技术于开发以计算机为主的应用。
+软件工程是关于设计和开发优质软件。
+
+**ALAN TURING：**其实我只知道他是计算机科学与人工智能之父。。
+>艾伦·麦席森·图灵，OBE，FRS（英语：Alan Mathison Turing，又译阿兰·图灵，Turing也常翻译成涂林或者杜林，1912年6月23日－1954年6月7日）是英国计算机科学家、数学家、逻辑学家、密码分析学家和理论生物学家，他被视为计算机科学与人工智能之父。
+在第二次世界大战期间，图灵曾在“政府密码学校”（GC&CS，今政府通信总部）工作。政府密码学校位于布莱切利园，是英国顶级机密情报机构。图灵在这里从事密码破译工作，有一段时间，他领导了小屋8号（Hut 8）小组，负责德国海军密码分析。 期间他设计了一些加速破译德国密码的技术，包括改进波兰战前研制的机器Bombe，一种可以找到恩尼格玛密码机设置的机电机器。 图灵在破译截获的编码信息方面发挥了关键作用，使盟军能够在包括大西洋战役在内的许多重要交战中击败纳粹，并因此帮助赢得了战争。
+图灵对于人工智能的发展有诸多贡献，例如图灵曾写过一篇名为《Computing Machinery and Intelligence》的论文，提问“机器会思考吗？”（Can Machines Think?），作为一种用于判定机器是否具有智能的测试方法，即图灵测试。至今，每年都有试验的比赛。此外，图灵提出的著名的图灵机模型为现代计算机的逻辑工作方式奠定了基础。
+图灵是著名的男同性恋者，并因为其性倾向而遭到当时的英国政府迫害，职业生涯尽毁。他亦患有花粉过敏症。
+图灵还是一位世界级的长跑运动员。他的马拉松最好成绩是2小时46分03秒（手动计时），比1948年奥林匹克运动会金牌成绩慢11分钟。1948年的一次跨国赛跑比赛中，他跑赢了同年奥运会银牌得主汤姆·理查兹。
+
+**摩尔定律MOORE'S LAW：**>摩尔定律（英语：Moore's law）是由英特尔（Intel）创始人之一戈登·摩尔提出来的。其内容为：积体电路上可容纳的电晶体（晶体管）数目，约每隔两年便会增加一倍；经常被引用的“18个月”，是由英特尔首席执行官大卫·豪斯（David House）所说：预计18个月会将芯片的性能提高一倍（即更多的晶体管使其更快）。[1]
+半导体行业大致按照摩尔定律发展了半个多世纪，对二十世纪后半叶的世界经济增长做出了贡献，并驱动了一系列科技创新、社会改革、生产效率的提高和经济增长。个人计算机、因特网、智能手机等技术改善和创新都离不开摩尔定律的延续[2]。
+尽管摩尔定律的现象已经被观察到了数十年，摩尔定律仍应该被视为是对现象的观测或对未来的推测，而不是一个物理定律或自然界的规律，从另一角度看，未来的增长率在逻辑上无法保证会跟过去的數據一样，也就是逻辑上无法保证摩尔定律会持续下去。虽然预计摩尔定律将持续到至少2020年。[3]然而，2010年国际半导体技术发展路线图的更新增长已经在2013年年底放缓[4]；又比如说英特尔在22奈米跟14奈米的CPU制程上已经放慢了技术更新的脚步，之后的时间里，晶体管数量密度预计只会每三年增加一倍。
