--- a/hw01.md
+++ b/hw01.md
@@ -36,6 +36,7 @@ title: 用维基百科解释名词
 图灵是著名的男同性恋者，并因为其性倾向而遭到当时的英国政府迫害，职业生涯尽毁。他亦患有花粉过敏症。
 图灵还是一位世界级的长跑运动员。他的马拉松最好成绩是2小时46分03秒（手动计时），比1948年奥林匹克运动会金牌成绩慢11分钟。1948年的一次跨国赛跑比赛中，他跑赢了同年奥运会银牌得主汤姆·理查兹。
 
-**摩尔定律MOORE'S LAW：**>摩尔定律（英语：Moore's law）是由英特尔（Intel）创始人之一戈登·摩尔提出来的。其内容为：积体电路上可容纳的电晶体（晶体管）数目，约每隔两年便会增加一倍；经常被引用的“18个月”，是由英特尔首席执行官大卫·豪斯（David House）所说：预计18个月会将芯片的性能提高一倍（即更多的晶体管使其更快）。[1]
+**摩尔定律MOORE'S LAW：**
+>摩尔定律（英语：Moore's law）是由英特尔（Intel）创始人之一戈登·摩尔提出来的。其内容为：积体电路上可容纳的电晶体（晶体管）数目，约每隔两年便会增加一倍；经常被引用的“18个月”，是由英特尔首席执行官大卫·豪斯（David House）所说：预计18个月会将芯片的性能提高一倍（即更多的晶体管使其更快）。[1]
 半导体行业大致按照摩尔定律发展了半个多世纪，对二十世纪后半叶的世界经济增长做出了贡献，并驱动了一系列科技创新、社会改革、生产效率的提高和经济增长。个人计算机、因特网、智能手机等技术改善和创新都离不开摩尔定律的延续[2]。
 尽管摩尔定律的现象已经被观察到了数十年，摩尔定律仍应该被视为是对现象的观测或对未来的推测，而不是一个物理定律或自然界的规律，从另一角度看，未来的增长率在逻辑上无法保证会跟过去的數據一样，也就是逻辑上无法保证摩尔定律会持续下去。虽然预计摩尔定律将持续到至少2020年。[3]然而，2010年国际半导体技术发展路线图的更新增长已经在2013年年底放缓[4]；又比如说英特尔在22奈米跟14奈米的CPU制程上已经放慢了技术更新的脚步，之后的时间里，晶体管数量密度预计只会每三年增加一倍。
