--- a/hw02.md
+++ b/hw02.md
@@ -4,6 +4,26 @@ title: 还是用维基百科
 ---
 
 #  My second homework
+
+## 进制转换
+I、1分12秒 = 72000 毫秒
+
+II、   （7A）<font size = "1">13</font> = (101)<font size = "1">10</font>
+
+III、   (7A)<font size = "1">16</font>=(122)<font size = "1">10</font>
+
+IV、    (7A)<font size = "1">16</font>=(1111010)<font size = "1">2</font>=(172)<font size = "1">8</font>
+
+V、     (1011011)<font size = "1">2</font>=(133)<font size = "1">8</font>=(5b)<font size = "1">16</font>
+
+VI、    (678)<font size = "1">10</font>=(1010100110)<font size = "1">2</font>=(1246)<font size = "1">8</font>
+
+VII、   (111)<font size = "1">2</font>+(101)<font size = "1">2</font>=(1100)<font size = "1">2</font>
+
+
+
+
+
 ## Information
 >Information is any entity or form that provides the answer to a question of some kind or resolves uncertainty. It is thus related to data and knowledge, as data represents values attributed to parameters, and knowledge signifies understanding of real things or abstract concepts.[1] As it regards data, the information's existence is not necessarily coupled to an observer (it exists beyond an event horizon, for example), while in the case of knowledge, the information requires a cognitive observer.
 
@@ -13,3 +33,15 @@ title: 还是用维基百科
 >algorithm  is an unambiguous specification of how to solve a class of problems. Algorithms can perform calculation, data processing and automated reasoning tasks.
 ## Software bug
 >A software bug is an error, flaw, failure or fault in a computer program or system that causes it to produce an incorrect or unexpected result, or to behave in unintended ways. The process of fixing bugs is termed "debugging" and often uses formal techniques or tools to pinpoint bugs, and since the 1950s, some computer systems have been designed to also deter, detect or auto-correct various computer bugs during operations.
+
+
+
+
+
+
+## 写出以下概念的英文单词
+
+1) 十进制： Decimal system
+2) 二进制： Binary
+3) 八进制： Octal
+4) 十六进制： Hexadecimal 
