--- a/hw05.md
+++ b/hw05.md
@@ -8,7 +8,7 @@ title: 作业
 ### 3、画出布尔式(A+B)(A+C)对应的电路图；
 ![](images/与门逻辑和真值表.jpeg)
 
-### 4、表现出以下电路图(在ppt上)的真值表；
+### 4、表现出以下电路图(在ppt上)的真值表.；
 ![](images/电路图.png)
 
 ### 5、什么是电路等效性？用真值表表示式子 (AB)′=A′+B′ 
